@@ -1,1 +1,10 @@
 # To-Do
+A To-Do list made by using javaFX.
+
+Note:
+We have to add javafx-sdk external library as it's not included with jdk.\
+Download Link: https://gluonhq.com/products/javafx/
+
+Afterwards, We have to add the followings to VM options (Run>edit configurations):\
+--module-path your_full_path_of_the_javafx_sdk  //Ex: --module-path C:\Users\TN\Desktop\javafx-sdk-11.0.2\lib\
+--add-modules javafx.controls,javafx.fxml 
